# aidevr

./: .gitignore  AGENT.md  README.md  agent_output.txt  ai_coder_agent.py  demo_simple_workflow.py  pyproject.toml  requirements.txt  test_simple.py
tests/: test_ai_coder_agent.py  test_core_functions.py  test_integration.py
